# KWS-Mamba-Project

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
assets/: visualize_pipeline.py
configs/: mamba_medium.yaml
notebooks/: BenchmarkGPU_Mamba.ipynb  KWS_CNN.ipynb  KWS_RetNet.ipynb  Mel_KWS_Mamba_NoAux_Large.ipynb  Mel_KWS_Mamba_NoAux_Medium.ipynb  Mel_KWS_Mamba_NoAux_Small.ipynb  Ret_Net_BenchmarkGPU.ipynb  pipeline_project.ipynb  testing_LModel_MFCC.ipynb  testing_mModel_MFCC.ipynb  testing_sModel_MFCC.ipynb
scripts/: train.py
src/kws_mamba/: __init__.py  train.py
src/kws_mamba/benchmarks/: __init__.py  bench-mamba.py  bench-retnet.py
src/kws_mamba/data/: __init__.py  audio.py  dataset.py
src/kws_mamba/models/: __init__.py  cnn.py  mamba_mel.py  mamba_mfcc.py  retnet.py
src/kws_mamba/utils/: metrics.py  seed.py
src/mamba_kws/: __init__.py
src/mamba_kws/utils/: __init__.py
